--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,14 @@
 
 body {
   color: darkslategrey;
+  background: antiquewhite;
+}
+
+main {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: antiquewhite;
 }
 
 h1 {
@@ -32,16 +36,31 @@ button {
 }
 
 .call-btn {
+  display: none;
   background-color: darkslategrey;
   color: antiquewhite;
   font-size: 3rem;
-  margin-left: 7rem;
 }
 
 .hangup-btn {
+  display: none;
   background-color: darkred;
   color: white;
   font-size: 1.5rem;
-  margin-left: 6rem;
-  margin-top: 4rem;
+}
+
+.connected .hangup-btn {
+  display: block;
+}
+
+.iddle .call-btn {
+  display: block;
+}
+
+.audio-container {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
